# lab_3-Yalkunov-Ramil

./: CMakeLists.txt  main.cpp  main10.cpp  main11.cpp  main12.cpp  main13.cpp  main14.cpp  main15.cpp  main16.cpp  main17.cpp  main18.cpp  main19.cpp  main2.cpp  main20.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
