cmake_minimum_required(VERSION 3.24)
project(lab3_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab3_1 main.cpp)
add_executable(lab3_2 main2.cpp)
add_executable(lab3_3 main3.cpp)
add_executable (lab3_4 main4.cpp)
add_executable (lab3_5 main5.cpp)
add_executable (lab3_6 main6.cpp)
add_executable (lab3_7 main7.cpp)
add_executable (lab3_8 main8.cpp)
add_executable (lab3_9 main9.cpp)
add_executable (lab3_10 main10.cpp)
add_executable (lab3_11 main11.cpp)
add_executable (lab3_12 main12.cpp)
add_executable (lab3_13 main13.cpp)
add_executable (lab3_14 main14.cpp)
add_executable (lab3_15 main15.cpp)
add_executable (lab3_16 main16.cpp)
add_executable (lab3_17 main17.cpp)
add_executable (lab3_18 main18.cpp)
add_executable (lab3_19 main19.cpp)
add_executable (lab3_20 main20.cpp)
